crates/keron-lang/tests/corpus/errors/check/fn_body_forward_ref.keron
fn f(): Int {
  val a = b + 1
  val b = 2
  a
}
